prawn shop css fixes

--- a/src/main/resources/static/css/cart.css
+++ b/src/main/resources/static/css/cart.css
@@ -23,6 +23,10 @@ h1 {
     text-align: center;
 }
 
+.margin-right{
+    margin-right: 40px;
+}
+
 @media (max-width: 750px) {
     .content__item {
         width: 90vw;
