--- a/src/main/resources/templates/prawns/prawn__cart.html
+++ b/src/main/resources/templates/prawns/prawn__cart.html
@@ -13,9 +13,9 @@
         <img alt="back" th:src="@{/images/back.png}" class="button button_back button_round">
     </a>
     <h1>Cart</h1>
-    <div>
+    <div class="flex-row-center margin-right">
         <div class="font-big" th:text="${user.balance}"></div>
-        <img alt="money" th:src="@{/images/gold_coin.png}" class="menu-item icon">
+        <img alt="money" th:src="@{/images/gold_coin.png}" class="menu-item icon_b">
     </div>
 </div>
 
