--- a/src/main/resources/templates/prawns/prawn__shop.html
+++ b/src/main/resources/templates/prawns/prawn__shop.html
@@ -19,7 +19,7 @@
 
     <div class="flex-row-center">
         <b th:text="${user.user.login}"></b>
-        <a th:href="@{/}" class="button"> Main menu</a>
+        <a th:href="@{/}" class="button margin-left"> Main menu</a>
         <a th:href="@{/prawn/cart}">
             <img alt="Cart" class="shop-icon icon" th:src="@{/images/cart.png}">
         </a>
