--- a/src/main/resources/static/css/shop.css
+++ b/src/main/resources/static/css/shop.css
@@ -149,6 +149,10 @@ body {
     display: none;
 }
 
+.margin-left {
+    margin-left: 20px;
+}
+
 @media (max-width: 700px) {
     .grid {
         grid: "mobile-header" "search-bar" "catalogue";
